--- a/src/test/resource/log4j2.properties
+++ b/src/test/resource/log4j2.properties
@@ -15,4 +15,5 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
  
 rootLogger.level = debug
 rootLogger.appenderRefs = file
-rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.stdout.ref = LOGFILE
+#rootLogger.appenderRef.stdout.ref = STDOUT
